--- a/css/style.css
+++ b/css/style.css
@@ -501,5 +501,8 @@ form {
     color: blue;
     text-align: center;
     font-size: 30px;
+    margin-bottom: 10px;
+}
+.mopar-official {
     margin-bottom: 50px;
 }
